--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@story-protocol/core-sdk": "^1.4.1",
     "@tanstack/react-query": "^5.90.5",
-    "ethers": "^6.15.0",
+    "ethers": "^6.0.0",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "viem": "^2.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
